<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationPage"
        android:background="#FFFFFF">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="36dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="202dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="84dp"
                    android:text="@string/registration_title"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.444"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="350dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="36dp"
                    android:autofillHints="number"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:padding="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.428"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />



                <EditText
                    android:id="@+id/password"
                    android:layout_width="350dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:autofillHints="number"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.426"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mobileno" />

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="350dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textWebPassword"
                    android:autofillHints="number"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.426"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <EditText
                    android:id="@+id/Roll_number"
                    android:layout_width="350dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/hint_roll_number_alphanumeric"
                    android:inputType="text"
                    android:autofillHints="number"
                    android:padding="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.426"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="350dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:autofillHints="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.426"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Roll_number" />

                <EditText
                    android:id="@+id/mobileno"
                    android:layout_width="350dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/hint_mobile_number"
                    android:padding="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.426"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    android:autofillHints=""
                    android:inputType="number" />


                <Button
                    android:id="@+id/register"
                    android:layout_width="180dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:padding="12dp"
                    android:textColor="#FFFFFF"
                    android:text="Register"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
                    app:layout_constraintVertical_bias="0.225" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
